--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/vercel": "^5.0.2",
-    "astro": "^3.3.0"
+    "astro": "^3.3.0",
+    "astro-imagetools": "^0.9.0"
   }
 }
