--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.3",
     "@astrojs/vercel": "^5.0.2",
+    "@types/react": "^18.2.30",
+    "@types/react-dom": "^18.2.14",
     "astro": "^3.3.0",
-    "astro-imagetools": "^0.9.0"
+    "astro-imagetools": "^0.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
