--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@astrojs/react": "^3.0.3",
     "@astrojs/vercel": "^5.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "astro": "^3.3.0",
