--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^3.3.0",
     "astro-imagetools": "^0.9.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.4"
   }
 }
