--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@types/react": "^18.2.30",
     "@types/react-dom": "^18.2.14",
     "astro": "^3.3.0",
+    "astro-iconify": "^1.2.0",
     "astro-imagetools": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.4"
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.1"
   }
 }
