--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "astro-imagetools": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.4"
+    "react-image-gallery": "^1.3.0",
+    "react-scroll": "^1.9.0",
+    "react-slick": "^0.29.0",
+    "sass": "^1.69.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1"
