--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "astro": "^3.3.0",
     "astro-iconify": "^1.2.0",
     "astro-imagetools": "^0.9.0",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.5.2",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "sass": "^1.69.4",
